Thu Jul 31 14:11:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/resolve_changelog.rb: extracted from tool/merge_from_trunk.rb.

Thu Jul 31 12:23:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_unpack): upper half of hexdigits has never been used.

Thu Jul 31 11:31:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/syck.h (ASSERT): fix typo at r18176.

	* ext/syck/rubyext.c (rb_syck_compile): expression in ASSERT() has no
	  effect unless debug mode.

Thu Jul 31 10:51:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (ruby_iseq_disasm_insn): suppress warnings on platforms which
	  int size differs from pointer size.

	* ext/openssl/ossl_asn1.c (ossl_asn1_get_asn1type): ditto

	* ext/syck/rubyext.c (rb_syck_err_handler),
	  (syck_default_error_handler): ditto.

Thu Jul 31 02:21:39 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/syck/rubyext.c (rb_syck_compile): remove meaningless branch
	  that misleads into thinking that the variable sav may be
	  uninitialized.

Thu Jul 31 01:36:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_join, Init_File): moved separator to VM.

	* complex.c (make_patterns), rational.c (make_patterns): ditto.

	* include/ruby/mvm.h (rb_thread_lock_t): needed for inter-VM lock.

	* io.c (max_file_descriptor_lock): should be initialized.

	* pack.c (pack_unpack): lock for MVM.

Thu Jul 31 01:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_unlock_all): mutex is no longer a ruby object.

Thu Jul 31 01:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_unlock_all): mutex is no longer a ruby object.

Thu Jul 31 01:18:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (magic_comment_encoding): remove meaningless null check.

Thu Jul 31 01:11:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_specific_ptr): fix for reallocation.

Thu Jul 31 01:09:28 2008  Yusuke Endoh  <mame@tsg.ne.jp>
